--- a/Tic-Tac-Toe/src/index.css
+++ b/Tic-Tac-Toe/src/index.css
@@ -44,7 +44,7 @@ h1 {
   font-family: "Caprasimo", cursive;
   font-size: 3rem;
   margin: 0 auto 3rem auto;
-  color: #3f3b00;
+  color: #ffffff;
 }
 
 #game-container {
@@ -75,20 +75,20 @@ h1 {
 }
 
 #players.highlight-player li.active {
-  border-color: #f6e35a;
+  border-color: #319ff8;
   animation: pulse 2s infinite ease-in-out;
 }
 
 #players.highlight-player li.active .player-name,
 #players.highlight-player li.active .player-symbol {
-  color: #f6e35a;
+  color: #319ff8;
 }
 
 #players button {
   width: 3rem;
   border: none;
   background: none;
-  color: #c3ba78;
+  color: #fdfdfd;
   font-size: 0.9rem;
   cursor: pointer;
   transition: color 0.2s;
@@ -97,7 +97,7 @@ h1 {
 }
 
 #players button:hover {
-  color: #f8ca31;
+  color: #319ff8;
 }
 
 .player {
@@ -202,13 +202,14 @@ ol {
   align-items: center;
   background-color: rgba(40, 38, 23, 0.95);
   animation: pop-in 0.5s cubic-bezier(0.68, -0.55, 0.65, 0.52) forwards;
+  z-index: 100;
 }
 
 #game-over h2 {
   font-family: "Caprasimo", cursive;
   font-size: 4rem;
   text-align: center;
-  color: #fcd256;
+  color: #319ff8;
   margin: 0;
 }
 
@@ -223,25 +224,25 @@ ol {
   margin: 0 auto;
   font-size: 1.5rem;
   background: none;
-  border: 2px solid #fcd256;
-  color: #fcd256;
+  border: 2px solid #319ff8;
+  color: #319ff8;
   padding: 0.5rem 1rem;
   border-radius: 4px;
   cursor: pointer;
   transition: all 0.2s, color 0.2s;
-  box-shadow: 0 0 8px rgba(255, 187, 0, 0.4);
+  box-shadow: 0 0 8px rgba(0, 162, 255, 0.4);
 }
 
 #game-over button:hover {
-  background: #fcd256;
+  background: #319ff8;
   color: #3f3b00;
   transform: scale(1.1);
-  box-shadow: 0 0 20px rgba(255, 187, 0, 0.8);
+  box-shadow: 0 0 20px rgba(0, 162, 255, 0.4);
 }
 
 #log {
   max-width: 20rem;
-  color: #3f3b00;
+  color: #8da1a7;
   list-style: none;
   margin: 2rem auto;
   padding: 0;
@@ -255,7 +256,7 @@ ol {
 }
 
 #log li.highlighted {
-  background-color: #3f3b00;
+  background-color: #1d3535;
   color: white;
 }
 
@@ -322,15 +323,15 @@ ol {
 
 @keyframes pulse {
   0% {
-    border-color: #f6e35a;
-    box-shadow: 0 0 0 0 rgba(246, 227, 90, 0.4);
+    border-color: #319ff8;
+    box-shadow: 0 0 0 0 rgba(90, 171, 246, 0.4);
   }
   50% {
-    border-color: #f8c031;
+    border-color: #175e97;
     box-shadow: 0 0 0 0.5rem rgba(248, 165, 49, 0);
   }
   100% {
-    border-color: #f6e35a;
+    border-color: #319ff8;
     box-shadow: 0 0 0 0 rgba(246, 227, 90, 0);
   }
 }
@@ -347,5 +348,58 @@ ol {
   }
   100% {
     transform: scale(1);
+  }
+}
+
+@media screen and (max-width: 725px) {
+  #players {
+    align-items: start;
+    width: 100%;
+    flex-direction: column;
+  }
+
+  .player {
+    width: 100%;
+  }
+
+  #players li {
+    width: 100%;
+  }
+
+  #game-board button {
+    width: 5rem;
+    height: 5rem;
+    font-size: 3rem;
+    cursor: pointer;
+    font-family: "Caprasimo", cursive;
+    padding: 1rem;
+  }
+}
+
+@media screen and (max-width: 426px) {
+  #players {
+    align-items: start;
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .player {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #players li {
+    width: 100%;
+  }
+
+  #game-board button {
+    width: 4rem;
+    height: 4rem;
+    font-size: 2rem;
+    cursor: pointer;
+    font-family: "Caprasimo", cursive;
+    padding: 1rem;
   }
 }
